--- a/blogAngular/src/app/home/home.component.html
+++ b/blogAngular/src/app/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<div class="container w-100">
+
+    <div class="row w-100 mt-5">
+        <div class="col-md-12">
+            <h1 class="text-monospace text-center">Sejam bem vindos ao meu blog!</h1>
+        </div>
+    </div>
+    <div class="row mt-4 mb-4 w-100">
+        <div class="col-md-12">
+            <p class="text-justify text-monospace">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis nesciunt illo temporibus autem qui iste reiciendis neque voluptate animi, ipsam facere dolore voluptatibus, itaque dolorum corporis vel dignissimos excepturi totam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis nesciunt illo temporibus autem qui iste reiciendis neque voluptate animi, ipsam facere dolore voluptatibus, itaque dolorum corporis vel dignissimos excepturi totam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis nesciunt illo temporibus autem qui iste reiciendis neque voluptate animi, ipsam facere dolore voluptatibus, itaque dolorum corporis vel dignissimos excepturi totam.</p>
+        </div>
+    </div>
+</div>
+    <div class="parallax"></div>
+
+    <div class="row mt-5 mb-5 w-100">
+        <div class="col-md-12 w-100 d-flex justify-content-center">
+            <button class="btn btn-outline-dark text-uppercase font-weight-bold">Ver o Feed</button>
+        </div>
+    </div>
+
